syntax = "proto3";

package hello;

service HelloService {
  rpc GetHello (HelloId) returns (HelloWithId) {}
}

message HelloId {
  int64 id = 1;
}

message HelloWithId {
  string message = 1;
}